// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Queries Should fetch a list of users 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "getUsers": [
          {
            "email": "test@gmail.com",
            "name": "Micheal Clark",
            "role": "admin",
          },
          {
            "email": "test2@gmail.com",
            "name": "Stuart Board",
            "role": "user",
          },
          {
            "email": "shakib@gmail.com",
            "name": "shakib",
            "role": "user",
          },
        ],
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`User Queries Should fetch a single user based on a unique email 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "getUser": {
          "email": "test@gmail.com",
          "name": "Micheal Clark",
          "role": "admin",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;
